--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -227,9 +227,9 @@
         EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
         MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
         IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
-        CLAIM, &nbsp;&nbsp; DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
-        CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH
-        THE MATERIALS OR THE USE OR OTHER DEALINGS IN THE MATERIALS.</big><br>
+        CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+        TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+        MATERIALS OR THE USE OR OTHER DEALINGS IN THE MATERIALS.</big><br>
     </p>
     <h2><a class="mozTocH2" name="mozTocId336772"></a><big>Chapter 4. System
         requirements</big></h2>
@@ -724,7 +724,6 @@
           background);</span> – Load a background </big><big>from the buffer.</big><big><br>
         <br>
       </big><big><span style="font-style: italic;">void Scene::load(</span></big><big
-
         style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
         – Load a background from the target file.</big><br>
       <big><br>
@@ -875,12 +874,12 @@
         Set the sprite position to the start position.<br>
         <br>
       </big><big><span style="font-style: italic;">void Billboard::go_start_x();</span>
-        – Set </big><big>the x-coordinate of</big><big> sprite position to </big><big>x-coordinate
-        of</big><big> start position.<br>
+        – Set </big><big>the x-coordinate of</big><big> the sprite position to the </big><big>x-coordinate
+        of</big><big> the start position.<br>
         <br>
       </big><big><span style="font-style: italic;">void Billboard::go_start_y();</span>
-        – Set the </big><big>y-coordinate of</big><big> sprite position to </big><big>y-coordinate
-        of</big><big> start position.</big><br>
+        – Set the </big><big>y-coordinate of the</big><big> sprite position to the </big><big>y-coordinate
+        of the</big><big> start position.</big><br>
       <br>
       <big><span style="font-style: italic;">void Billboard::draw();</span> –
         Draw a sprite.<br>
@@ -1184,17 +1183,17 @@
           *name);</span> – Load a font from the target file.<br>
         <br>
         <span style="font-style: italic;"> void Text::print(const char target);</span>
-        – Draw a single character in the current position.<br>
+        – Draw a single character at the current position.<br>
         <br>
         <span style="font-style: italic;"> void Text::print(const char *target);</span>
         – Draw a text at the current position.<br>
         <br>
         <span style="font-style: italic;"> void Text::print(const unsigned int
           x, const unsigned int y, const char target);</span> – Draw a single
-        character in the specific position.<br>
+        character at the specific position.<br>
         <br>
         <span style="font-style: italic;"> void Text::print(const unsigned int
-          x, const unsigned int y, const char *target);</span> – Draw a text in
+          x, const unsigned int y, const char *target);</span> – Draw a text at
         the specific position.<br>
         <br>
         <span style="font-style: italic;">void Text::disable_mirror();</span> –
@@ -1495,9 +1494,9 @@
         <br>
         <span style="text-decoration: underline;"> Collision detail</span><br>
       </big></p>
-    <p><big>The detector uses the bounding box collision method to detect
-        collisions. The collision-related information is stored in a custom data
-        type.<br>
+    <p><big>The
+        detector uses the bounding box collision method to detect a collision.
+        The collision-related information is stored in a custom data type.<br>
         <br>
         <span style="font-style: italic;"> typedef struct</span><span style="font-style: italic;"><br>
           {</span><br>
@@ -1505,7 +1504,6 @@
         <span style="font-style: italic;">&nbsp;unsigned int y;</span><br>
         <span style="font-style: italic;">&nbsp;unsigned int width;</span><br>
         <span style="font-style: italic;">&nbsp;unsigned int height;</span><span
-
           style="font-style: italic;"><br>
           } BOX;</span><br>
         <br>
@@ -1714,7 +1712,7 @@
       <big> </big></p>
     <h2><a class="mozTocH2" name="mozTocId59386"></a><big>Chapter 2. Tools</big></h2>
     <p><big>This module is implemented as a few functions</big><big>. All these
-        functions are declared in <span style="font-style: italic;">Tools</span>
+        functions are declared in the <span style="font-style: italic;">Tools</span>
         sub-namespace.<br>
         <br>
         <span style="font-style: italic;">void quit();</span> </big><big>–</big><big>
@@ -1746,11 +1744,12 @@
         functions are declared in <span style="font-style: italic;">Resource</span>
         sub-namespace.<br>
         <br>
-        <span style="font-style: italic;">create</span> create a single resource
-        or an array of resources. It has two forms. First, create a single
-        resource. First form takes a handle to resource handle as arguments.
-        Second form: create an array of resources. The second form takes a
-        handle to resource handle and resource amount as arguments.</big></p>
+        <span style="font-style: italic;">create</span>
+        creates a resources. The first form of this function creates a single
+        resource. It takes a handle to a resource handle as an argument. The
+        second form creates an array of resources. It takes a handle to a
+        resource handle and a resource amount.<br>
+      </big></p>
     <p><big><span style="font-style: italic;"> destroy</span> delete a resource
         if it already exists. This function takes resource handle as an
         argument.</big></p>
@@ -2398,12 +2397,12 @@
         UTF-16 converter.<br>
       </big><big><span style="font-style: italic;"> Render</span> implements the
         OPENGL render.<br>
-        <span style="font-style: italic;"> Resizer</span> is intended to calculate
-        the correct texture size.<br>
-        <span style="font-style: italic;"> Rectangle</span> is intended to draw a
-        textured rectangle.<br>
-        <span style="font-style: italic;"> Shape</span> is the base class of the <span
-          style="font-style: italic;">Rectangle</span> class.<br>
+        <span style="font-style: italic;"> Resizer</span> is intended to
+        calculate the correct texture size.<br>
+        <span style="font-style: italic;"> Rectangle</span> is intended to draw
+        a textured rectangle.<br>
+        <span style="font-style: italic;"> Shape</span> is the base class of the
+        <span style="font-style: italic;">Rectangle</span> class.<br>
       </big></p>
     <h2><a class="mozTocH2" name="mozTocId293644"></a><big>Chapter 3. Base
         graphics subsystem</big></h2>
@@ -2961,6 +2960,6 @@
       9.0.7 – 9.0.8: Small changes.<br>
       9.0.9: Image resizer improved.<br>
       9.1: Small changes.<br>
-      9.1.0.1 – 9.1.0.4: Documentation updated.</big><br>
+      9.1.0.1 – 9.1.0.5: Documentation updated.</big><br>
   </body>
 </html>
