--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -136,8 +136,9 @@
       <li><big>Easy</big><big>-</big><big>to</big><big>-</big><big>use
           object-oriented design.</big></li>
       <li><big>Very fast.</big></li>
-      <li><big>Minimum external dependencies: only DirectX, OPENGL, and standard
-          Windows API libraries.</big></li>
+      <li><big>Minimum external dependencies: only <a href="https://learn.microsoft.com/en-us/windows/win32/directx">DirectX</a>,
+          <a href="https://opengl.org">OPENGL</a>, and standard <a href="https://learn.microsoft.com/en-us/windows/win32/apiindex/windows-api-list">Windows
+            API</a> libraries.</big></li>
       <li><big>You don't need to link a main program with the engine binary
           file. The engine is just the source code files.<br>
         </big></li>
@@ -316,7 +317,8 @@
     </ul>
     <p><big><span style="text-decoration: underline;">Windows XP support</span><br>
         <br>
-        You need one of the following compilers for Windows XP support:<br>
+        You need one of the following compilers for <a href="https://en.wikipedia.org/wiki/Windows_XP">Windows
+          XP</a> support:<br>
       </big></p>
     <ul>
       <li><big>TDM–GCC</big></li>
@@ -545,8 +547,9 @@
           Animation::check_frame(const unsigned int target) const;</span> –
         Return true if the target frame is valid.</big></p>
     <h2><a class="mozTocH2" name="mozTocId904725"></a><big>Chapter 5. Image kind</big></h2>
-    <p><big>Image kinds look like predefined constants. You can see it below.</big></p>
-    <table border="1">
+    <p><big>The image kinds look like the predefined constants. You can see it
+        below.</big></p>
+    <table style="width: 661px; height: 106px;" border="1">
       <tbody>
         <tr>
           <td><big>Image kind<br>
@@ -555,11 +558,11 @@
         </tr>
         <tr>
           <td><big>HORIZONTAL_ANIMATED </big></td>
-          <td><big>Horizontal scrolling background or horizontal strip </big></td>
+          <td><big>The horizontal scrolling background or the horizontal strip </big></td>
         </tr>
         <tr>
           <td><big>VERTICAL_ANIMATED </big></td>
-          <td><big>Vertical scrolling background or vertical strip<br>
+          <td><big>The vertical scrolling background or the vertical strip<br>
             </big></td>
         </tr>
       </tbody>
@@ -654,7 +657,7 @@
         <br>
       </big><big><span style="font-style: italic;"> bool
           Background::check_frame(const unsigned int target) const;</span> –
-        Return true if target frame is valid.</big><br>
+        Return true if the target frame is valid.</big><br>
       <br>
       <big><span style="font-style: italic;">&nbsp;unsigned int
           Background::get_frame() const;</span> – Return the current frame.<br>
@@ -726,7 +729,6 @@
           background);</span> – Load a background </big><big>from the buffer.</big><big><br>
         <br>
       </big><big><span style="font-style: italic;">void Scene::load(</span></big><big
-
         style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
         – Load a background from the target file.</big><br>
       <big><br>
@@ -904,7 +906,7 @@
         <br>
         There are two kinds of ordinary sprites: horizontal strips and vertical
         strips. It is a small image with few frames. Do you remember an analog
-        camera? The strips look like photo ribbon.</big></p>
+        camera? The strips look like a photo ribbon.</big></p>
     <p><big>The horizontal strip looks like the horizontally oriented photo
         ribbon.<br>
         The vertical strip looks like the vertically oriented photo ribbon.<br>
@@ -1043,7 +1045,6 @@
           const;</span> – Return the row of the the target frame.<br>
         <br>
         <span style="font-style: italic;"> unsigned int Sheet::get_column(</span></big><big
-
         style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
           const;</span> – Return</big><big> column</big><big> </big><big>of the
         target frame</big><big>.<br>
@@ -1059,6 +1060,7 @@
           const;</span> – Return</big><big> the number of column</big><big>s.<br>
         <br>
       </big><big><span style="font-style: italic;">void Sheet::destroy()</span></big><big><span
+
           style="font-style: italic;">;</span> – </big><big><span style="font-style: italic;"></span>Destroy
         a sprite sheet image and the texture.<br>
         <br>
@@ -1113,10 +1115,10 @@
         <br>
       </big><big style="text-decoration: underline;">Text orientation</big><br>
       <br>
-      <big>Text orientation looks like predefined constants. You can see it
-        below.<br>
+      <big>The text orientation looks like the predefined constants. You can see
+        it below.<br>
       </big></p>
-    <table border="1">
+    <table style="width: 404px; height: 85px;" border="1">
       <tbody>
         <tr>
           <td><big>Text orientation<br>
@@ -1125,12 +1127,12 @@
         </tr>
         <tr>
           <td><big>HORIZONTAL_TEXT </big></td>
-          <td><big>Horizontal-oriented text<br>
+          <td><big>The horizontal-oriented text<br>
             </big></td>
         </tr>
         <tr>
           <td><big>VERTICAL_TEXT </big></td>
-          <td><big>Vertical-oriented text</big></td>
+          <td><big>The vertical-oriented text</big></td>
         </tr>
       </tbody>
     </table>
@@ -2157,8 +2159,8 @@
         button was released.</big></p>
     <p><big><span style="text-decoration: underline;">Mouse buttons</span><br>
       </big></p>
-    <p><big>Mouse button codes look like predefined constants. You can see it
-        below.</big></p>
+    <p><big>The mouse button codes look like the predefined constants. You can
+        see it below.</big></p>
     <p><big> </big></p>
     <table border="1">
       <tbody>
@@ -2201,8 +2203,8 @@
         <br>
         <span style="text-decoration: underline;"> D-Pad button codes</span><br>
       </big></p>
-    <p><big>D-Pad button codes look like predefined constants. You can see it
-        below.</big></p>
+    <p><big>The D-Pad button codes look like the predefined constants. You can
+        see it below.</big></p>
     <p><big> </big></p>
     <table border="1">
       <tbody>
@@ -2250,8 +2252,8 @@
     </table>
     <p><big><span style="text-decoration: underline;">Sticks identifiers</span><br>
       </big></p>
-    <p><big>Sticks identifiers look like predefined constants. You can see it
-        below.</big></p>
+    <p><big>The sticks identifiers look like the predefined constants. You can
+        see it below.</big></p>
     <p><big> </big></p>
     <table border="1">
       <tbody>
@@ -2271,8 +2273,8 @@
     </table>
     <p><big><span style="text-decoration: underline;">Stick direction</span><br>
       </big></p>
-    <p><big>Stick direction looks like predefined constants. You can see it
-        below.</big></p>
+    <p><big>The stick direction looks like the predefined constants. You can see
+        it below.</big></p>
     <p><big> </big></p>
     <table border="1">
       <tbody>
@@ -2301,7 +2303,7 @@
     <p><big><span style="text-decoration: underline;">Working with a Game-pad</span><br>
         <br>
         Just use <span style="font-style: italic;">Gamepad</span> class to work
-        with a Game-pad. Let's look at the publicly available methods.<br>
+        with the Game-pad. Let's look at the publicly available methods.<br>
         <br>
         <span style="font-style: italic;"> unsigned int Gamepad::get_amount();</span>
         – Return the number of connected Game-Pad.<span style="font-style: italic;"><br>
@@ -2455,7 +2457,7 @@
         <br>
         <span style="text-decoration: underline;"> Internal key state</span><br>
       </big></p>
-    <p><big>Internal states of keyboard keys and mouse buttons look like
+    <p><big>The internal states of keyboard keys and mouse buttons look like the
         predefined constants. You can see it below.<br>
       </big></p>
     <p><big> </big></p>
@@ -2963,6 +2965,6 @@
       9.0.7 – 9.0.8: Small changes.<br>
       9.0.9: Image resizer improved.<br>
       9.1: Small changes.<br>
-      9.1.0.1 – 9.1.0.6: Documentation updated.</big><br>
+      9.1.0.1 – 9.1.0.7: Documentation updated.</big><br>
   </body>
 </html>
